external-crates/move/crates/move-compiler/tests/development/typing/signed_int_basic.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: development
  lint: false
---
error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:4:17
  │
4 │         let _x: i8 = 0i8;
  │                 ^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:4:22
  │
4 │         let _x: i8 = 0i8;
  │                      ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:5:17
  │
5 │         let _y: i16 = 0i16;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:5:23
  │
5 │         let _y: i16 = 0i16;
  │                       ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:6:17
  │
6 │         let _z: i32 = 0i32;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:6:23
  │
6 │         let _z: i32 = 0i32;
  │                       ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:7:17
  │
7 │         let _w: i64 = 0i64;
  │                 ^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:7:23
  │
7 │         let _w: i64 = 0i64;
  │                       ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:8:17
  │
8 │         let _v: i128 = 0i128;
  │                 ^^^^ Signed integer types are under development

error[E13003]: feature is under active development
  ┌─ tests/development/typing/signed_int_basic.move:8:24
  │
8 │         let _v: i128 = 0i128;
  │                        ^^^^^ Signed integer types are under development
